--- a/css/style2025.css
+++ b/css/style2025.css
@@ -114,6 +114,8 @@ footer {
   color: #fff;
   padding: 10px 0;
   background-color: rgba(1, 1, 1, 0.8);
+  background-blend-mode: darken;
+  filter: blur(2px);
 }
 footer a {
   color: #fff;
